# llm-survival

./: .gitignore  README.md  combine_minisets.ipynb  config.py  dataset_comparison.ipynb  environment.yml  finetune_detoxify.py  make_mini_sample.py  make_multisample.py  prepare_test_set.py  pyproject.toml  real_data_conformal.ipynb  real_data_conformal_new.ipynb  real_data_experiments.ipynb  real_data_experiments.py  real_data_experiments_new.ipynb  real_data_plots.ipynb  real_data_plots.py  real_data_uncalib_experiments.ipynb  real_data_uncalib_experiments.py  results.csv  results_01.csv  results_05.csv  results_10.csv  results_global.csv  results_uncalib.csv  results_v2.csv  run_survival.py  sim_alloc_rand.ipynb  split_dataset.py  survive.ipynb  synthetic_exp.py  test.ipynb  test2.ipynb  test3.ipynb  test_prompts_only
configs/: Classification_RTP_ModernBERT.json  MS_RTP_500_ModernBERT.json  MS_RTP_ModernBERT.json  Prop_RTP_500_BERT.json  Prop_RTP_500_ModernBERT.json  Prop_RTP_500_ModernBERT_L1.json  Prop_RTP_ModernBERT.json  Sparsemax_RTP_500_ModernBERT.json  Survival_RTP_ModernBERT.json
data/: make_split_ms.py
my_scripts/: config.py  finetune_detoxify.py  make_mini_sample.py  make_multisample.py  prepare_test_set.py  real_data_experiments.py  real_data_plots.py  real_data_uncalib_experiments.py  split_dataset.py
notebooks/: 01_scores_evaluation_papi_updates.ipynb  02_helm_results.ipynb
sampling_tinkering/: sim.ipynb  sim_allocation.ipynb
scripts/: collate.py  collate_prompts.py  evaluate.py  make_mini_sample.py  make_multisample.py  prepare_test_set.py  (+5 more)
(+37 files in other folders)
